--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.52.1",
-    "sass": "^1.77.8",
-    "swiper": "^11.1.8"
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
