--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^5.16.6",
-    "antd": "^5.19.4",
+    "antd": "^5.21.1",
     "axios": "^1.7.2",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.52.1",
+    "react-i18next": "^15.0.2",
+    "react-phone-input-2": "^2.15.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.8"
   },
   "devDependencies": {
