--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.52.1",
     "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-toastify": "^10.0.5",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
